# slack-notifier-mcp

./: .env.example  LICENSE  MANIFEST.in  README.md  pyproject.toml  run.py  test_tool.py
src/slack_notifier_mcp/: __init__.py  server.py
